<resources>
    <string name="app_name">EcoWaste</string>

    <string name="login_1">Silakan masukkan email dan password Anda terlebih dahulu untuk login</string>
    <string name="login_2">Masuk</string>
    <string name="login_3">Login</string>
    <string name="login_text1">Silakan masukan email dan password anda \n terlebih dahulu untuk login</string>
    <string name="email_lgn">Email</string>
    <string name="password_lgn">Password</string>
    <string name="email_sign">Email</string>
    <string name="password_sign">Password</string>
    <string name="nama_sign">Nama</string>
    <string name="cpassword_sign">Konfirmasi Password</string>
    <string name="login_4">Belum punya akun?</string>
    <string name="login_5">Daftar</string>
    <string name="login_6">Lupa Password?</string>

    <string name="regis_text1">Silakan lengkapi data berikut \n untuk register</string>
    <string name="regis_2">Daftar</string>
    <string name="regis_namahint">Masukkan nama anda</string>
    <string name="regis_emailhint">Masukkan email anda</string>
    <string name="regis_passwordhint">Masukkan password anda</string>
    <string name="regis_cpasswordhint">Masukkan password anda lagi</string>
    <string name="regis_3">Sudah punya akun?</string>

    <string name="profile_ep_">Edit Profile</string>
    <string name="profile_gantipass">Ganti Password</string>
    <string name="profile_riwayat">Riwayat Pelaporan</string>
    <string name="profile_logout">Logout</string>

    <string name="hello_blank_fragment">Halo fragmen kosong</string>

</resources>
