<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".register.RegisterActivity">

    <Button
        android:id="@+id/btn_regis"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bg_color_input"
        android:backgroundTint="@color/color_2"
        android:fontFamily="@font/inter_regular"
        android:text="@string/regis_2"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="@+id/regis_inpt_conpass"
        app:layout_constraintStart_toStartOf="@+id/regis_inpt_conpass" />

    <LinearLayout
        android:id="@+id/regis_inpt_conpass"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bg_color_input"
        android:elevation="4dp"
        android:orientation="horizontal"
        android:paddingStart="16dp"
        android:paddingTop="10dp"
        android:paddingEnd="16dp"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regis_inpt_pass">

        <ImageView
            android:id="@+id/iv_conpass"
            android:layout_width="32dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            app:srcCompat="@drawable/ic_baseline_lock_24" />

        <!-- Strip -->
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginStart="3dp"
            android:background="@color/white" />

        <EditText
            android:id="@+id/ed_regis_conpassword"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:ems="10"
            android:fontFamily="@font/inter_regular"
            android:hint="Masukkan password Anda"
            android:inputType="textPassword"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textColorHint="#50FFFFFF"
            android:textSize="13.5sp" />

        <ImageView
            android:id="@+id/ic_show_conpass"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="5dp"
            app:srcCompat="@drawable/ic_invisible" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/regis_inpt_pass"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/bg_color_input"
        android:elevation="4dp"
        android:orientation="horizontal"
        android:paddingStart="16dp"
        android:paddingTop="10dp"
        android:paddingEnd="16dp"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="@+id/regis_inpt_conpass"
        app:layout_constraintStart_toStartOf="@+id/regis_inpt_conpass"
        app:layout_constraintTop_toBottomOf="@+id/regis_inpt_email">

        <ImageView
            android:id="@+id/iv_pass"
            android:layout_width="32dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            app:srcCompat="@drawable/ic_baseline_lock_24" />

        <!-- Strip -->
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginStart="3dp"
            android:background="@color/white" />

        <EditText
            android:id="@+id/ed_regis_password"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:ems="10"
            android:fontFamily="@font/inter_regular"
            android:hint="Masukkan password Anda"
            android:inputType="textPassword"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textColorHint="#50FFFFFF"
            android:textSize="13.5sp" />

        <ImageView
            android:id="@+id/ic_show_pass"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="5dp"
            app:srcCompat="@drawable/ic_invisible" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/regis_inpt_email"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/bg_color_input"
        android:elevation="4dp"
        android:orientation="horizontal"
        android:paddingStart="16dp"
        android:paddingTop="10dp"
        android:paddingEnd="16dp"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="@+id/regis_inpt_pass"
        app:layout_constraintStart_toStartOf="@+id/regis_inpt_pass"
        app:layout_constraintTop_toBottomOf="@+id/regis_inpt_name">

        <ImageView
            android:id="@+id/iv_email"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center_vertical"
            app:srcCompat="@drawable/ic_baseline_email_24" />
        <!-- Strip -->
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginStart="3dp"
            android:background="@color/white" />

        <EditText
            android:id="@+id/ed_regis_email"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:ems="10"
            android:fontFamily="@font/inter_regular"
            android:hint="Masukkan email Anda"
            android:inputType="textEmailAddress"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textColorHint="#50FFFFFF"
            android:textSize="13.5sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/regis_inpt_name"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/bg_color_input"
        android:elevation="4dp"
        android:orientation="horizontal"
        android:paddingStart="16dp"
        android:paddingTop="10dp"
        android:paddingEnd="16dp"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="@+id/regis_inpt_email"
        app:layout_constraintStart_toStartOf="@+id/regis_inpt_email"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <ImageView
            android:id="@+id/iv_user"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center_vertical"
            app:srcCompat="@drawable/ic_baseline_account_circle_24" />
        <!-- Strip -->
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginStart="3dp"
            android:background="@color/white" />

        <EditText
            android:id="@+id/ed_regis_name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:ems="10"
            android:fontFamily="@font/inter_regular"
            android:hint="Masukkan nama Anda"
            android:inputType="text"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textColorHint="#50FFFFFF"
            android:textSize="13.5sp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="251dp"
        android:layout_height="75dp"
        android:layout_marginTop="8dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_gemastik" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="50dp"
        android:fontFamily="@font/inter_light"
        android:text="@string/regis_1"
        android:textAlignment="center"
        android:textColor="@color/color_4"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/inter_medium"
            android:text="@string/regis_3"
            android:textColor="@color/color_4"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="5dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/loginnow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/inter_extrabold"
            android:text="@string/login_3"
            android:textColor="@color/color_2"
            android:textSize="12sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/regis_2"
        android:textColor="@color/color_4"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/tv_conpass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/inter_medium"
        android:text="Confirm Password"
        android:textAlignment="textStart"
        android:textColor="@color/color_4"
        app:layout_constraintBottom_toTopOf="@+id/regis_inpt_conpass"
        app:layout_constraintStart_toStartOf="@+id/regis_inpt_conpass" />

    <TextView
        android:id="@+id/tv_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/inter_medium"
        android:text="Password"
        android:textAlignment="textStart"
        android:textColor="@color/color_4"
        app:layout_constraintBottom_toTopOf="@+id/regis_inpt_pass"
        app:layout_constraintStart_toStartOf="@+id/regis_inpt_pass" />

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="12dp"
        android:fontFamily="@font/inter_medium"
        android:text="Email"
        android:textAlignment="textStart"
        android:textColor="@color/color_4"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/regis_inpt_email"
        app:layout_constraintStart_toStartOf="@+id/regis_inpt_email" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/inter_medium"
        android:text="Name"
        android:textAlignment="textStart"
        android:textColor="@color/color_4"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/regis_inpt_name"
        app:layout_constraintStart_toStartOf="@+id/regis_inpt_name" />

</androidx.constraintlayout.widget.ConstraintLayout>